# bevy_2048

./: Cargo.toml  README.md  Trunk.toml  bevy_2048.js  index.html
.github/workflows/: pages.yaml
assets/nodes/: nodes.kra
assets/shaders/: bloom_buffer1.wgsl  bloom_buffer2.wgsl  bloom_material.wgsl  sparks_material.wgsl
docs/: code_smells.md  tasks.md
src/: loading_screen.rs  main.rs
src/animation_sprite/: mod.rs
src/game/: components.rs  effects.rs  mod.rs  sprites.rs  states.rs  utils.rs
src/game/systems/: effect.rs  game_logic.rs  input.rs  mod.rs  movement.rs  process.rs
src/menu/: menu_mod.rs  mod.rs  splash.rs
